<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ThermostatViewer">

  <TextView
    android:id="@+id/thermostatInfo"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="31dp"
    android:layout_marginLeft="31dp"
    android:layout_marginTop="36dp"
    android:layout_marginEnd="31dp"
    android:layout_marginRight="31dp"
    android:layout_marginBottom="82dp"
    android:text="TextView"
    app:layout_constraintBottom_toTopOf="@+id/temperatureInput"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <ToggleButton
    android:id="@+id/onOffToggle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="60dp"
    android:layout_marginRight="60dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <RadioGroup
    android:id="@+id/temperatureUnits"
    android:layout_width="211dp"
    android:layout_height="0dp"
    android:layout_marginStart="100dp"
    android:layout_marginLeft="100dp"
    android:layout_marginBottom="56dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/temperatureInput">

    <RadioButton
      android:id="@+id/celsiusButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="Celsius"/>

    <RadioButton
      android:id="@+id/fahrenheitButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="Fahrenheit"/>
  </RadioGroup>

  <NumberPicker
    android:id="@+id/temperatureInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginLeft="28dp"
    android:layout_marginBottom="51dp"
    android:ems="10"
    android:inputType="numberDecimal"
    app:layout_constraintBottom_toTopOf="@+id/temperatureUnits"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/thermostatInfo"
    app:layout_constraintVertical_bias="0.738"/>
</android.support.constraint.ConstraintLayout>