...
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".UserHome"
  tools:showIn="@layout/activity_user_home">

  <ImageButton
    android:id="@+id/camera_button"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="33dp"
    android:layout_marginBottom="269dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="27dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="27dp"
    android:onClick="goToCamera"
    android:scaleType="fitXY"
    app:layout_constraintBottom_toTopOf="@+id/adminButton"
    app:layout_constraintEnd_toStartOf="@+id/thermostat_button"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/ic_menu_camera"/>

  <ImageButton
    android:id="@+id/thermostat_button"
...
