<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".CameraViewer"
  tools:showIn="@layout/activity_camera_viewer">

  <TextView
    android:id="@+id/DeviceInformation"
    android:layout_width="350dp"
    android:layout_height="0dp"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="343dp"
    android:text=""
    app:layout_constraintBottom_toTopOf="@+id/cameraOnOff"
    app:layout_constraintEnd_toEndOf="@+id/cameraSees"
    app:layout_constraintHorizontal_bias="0.379"
    app:layout_constraintStart_toStartOf="@+id/cameraSees"
    app:layout_constraintTop_toTopOf="parent"/>

  <VideoView
    android:id="@+id/cameraSees"
    android:layout_width="321dp"
    android:layout_height="367dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="115dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/DeviceInformation"
    app:srcCompat="@android:drawable/screen_background_dark"/>

  <ToggleButton
    android:id="@+id/Record"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="21dp"
    android:layout_marginRight="21dp"
    android:layout_marginBottom="36dp"
    android:text="ToggleButton"
    android:textOff="Start Recording"
    android:textOn="Stop Recording"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/cameraOnOff"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/DeviceInformation"
    app:layout_constraintVertical_bias="1.0"/>

  <ToggleButton
    android:id="@+id/cameraOnOff"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="23dp"
    android:layout_marginRight="23dp"
    android:layout_marginBottom="36dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/Record"
    app:layout_constraintTop_toBottomOf="@+id/DeviceInformation"
    app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>